Edited to add value to linguist-vendored

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-PriberamCompressiveSummarizationCorpus/* linguist-vendored
-Report/* linguist-vendored
+PriberamCompressiveSummarizationCorpus/* linguist-vendored=true
+Report/* linguist-vendored=true
