added new attributes to .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 PriberamCompressiveSummarizationCorpus/* linguist-vendored=true
 Report/* linguist-vendored=true
+*.P text linguist-vendored=true
+*.C text linguist-vendored=true
